fix spacing on 2-row rows

--- a/src/css/nominees.styl
+++ b/src/css/nominees.styl
@@ -149,8 +149,8 @@
 	}
 	
 	// Nominee rows with two interior rows
-	&.caf-nominees-2rows ul {
-		margin-bottom: 35px
-		margin-bottom: 6vh;
+	&.caf-nominees-2rows ul ~ h4 {
+		margin-top: 30px !important;
+		margin-top: 3vh !important;
 	}
 }
